pass first spec and change mocha.js file to old one

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form id="pizzaType">
           <div class="form-group" id="styleMe">
             <label class="input">
-              <input id="pizzaSize" type="text">
+              <input id="pizzaSize" type="number">
               <span><span>Size (In.)</span></span>
             </label>
           </div>
@@ -37,7 +37,7 @@
       </div>
     <div class="row">
       <div id="result">
-        <h5>You ordered a <span class="customerOrder"></span> pizza.</h5>
+        <h5>You ordered a <span class="customerOrder"></span> pizza. Which will have <span class="pizzaSlices"></span> pieces.</h5>
       </div>
     </div>
   </div>
