--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
             </select>
             </div>
           </div>
-          <div class="form-group styleMe">
+          <div class="styleMe-radio">
+            <input type="radio"  id="cheese" class="pull-left " name="toppings" value="Cheese" style="display: none;">
+            <label class="radio cheese" for="cheese">Cheese</label>
+
+            <input type="radio"  id="pepperoni" class="pull-left" name="toppings" value="Pepperoni" style="display: none;">
+            <label class="radio pepperoni" for="pepperoni">Pepperoni</label>
+          </div>
+          <!-- <div class="form-group styleMe">
             <label class="input">
               <input id="toppings" type="text" required>
-              <span><span>Cheese or Pepperonni?</span></span>
+              <span><span>Cheese or Pepperoni?</span></span>
             </label>
-          </div>
+          </div> -->
           <button type="submit" class="btn">Order My Pizza</button>
         </form>
     </div>
