--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
               <span><span>Cheese or Pepperoni?</span></span>
             </label>
           </div> -->
+           <div class="span7 text-center">
           <button type="submit" class="btn">Order My Pizza</button>
+          </div>
         </form>
     </div>
-    <div class="row">
       <div id="order">
         <h5>You ordered a <span class="customerOrder"></span> pizza. Which will have <span class="slicesInOrder"></span> pieces.</h5>
       </div>
-    </div>
   </div>
   </div>
   </body>
