--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </form>
     </div>
       <div id="order">
-        <h5>You ordered a <span class="customerOrder"></span> pizza. Which will have <span class="slicesInOrder"></span> pieces.</h5>
+        <h5>You ordered a <span class="customerOrder"></span> pizza, which will have <span class="slicesInOrder"></span> pieces.</h5>
       </div>
   </div>
   </div>
