--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           <div class="form-group styleMe">
             <div class="center">
             <select id="pizzaSize">
-              <option value="Personal">Personal</option>
-              <option  value="X-Small">X-Small</option>
-              <option value="Small">Small</option>
-              <option value="Medium">Medium</option>
-              <option value="Large">Large</option>
-              <option value="X-Large">X-Large</option>
+              <option value="Personal">Personal (6 in.)</option>
+              <option  value="X-Small">X-Small (8 in.)</option>
+              <option value="Small">Small (10 in.)</option>
+              <option value="Medium">Medium (12 in.)</option>
+              <option value="Large">Large (14 in.)</option>
+              <option value="X-Large">X-Large (16 in.)</option>
             </select>
             </div>
           </div>
